@@ -92,7 +92,10 @@ static void clear_selection            (gpointer key, gpointer val, gpointer dat
 static GooCanvasItemModel* create_canvas_model (GtkPolarView *polv);
 static void get_canvas_bg_color        (GtkPolarView *polv, GdkColor *color);
 static gchar *los_time_to_str (GtkPolarView *polv, sat_t *sat);
-
+static void gtk_polar_view_store_showtracks (GtkPolarView *pv);
+static void gtk_polar_view_load_showtracks (GtkPolarView *pv);
+static void store_binary_hash_cfgdata (GKeyFile *cfgdata, GHashTable *hash, const gchar *cfgsection, const gchar *cfgkey) ;
+static void load_integer_list_boolean (GKeyFile *cfgdata,const gchar* section,const gchar *key,GHashTable *dest);
 
 static GtkVBoxClass *parent_class = NULL;
 
@@ -172,6 +175,7 @@ gtk_polar_view_init (GtkPolarView *polview)
 static void
 gtk_polar_view_destroy (GtkObject *object)
 {
+    gtk_polar_view_store_showtracks ( GTK_POLAR_VIEW(object));
 
     (* GTK_OBJECT_CLASS (parent_class)->destroy) (object);
 }
@@ -249,6 +253,7 @@ gtk_polar_view_new (GKeyFile *cfgdata, GHashTable *sats, qth_t *qth)
                                                          MOD_CFG_POLAR_SECTION,
                                                          MOD_CFG_POLAR_SHOW_EXTRA_AZ_TICKS,
                                                          SAT_CFG_BOOL_POL_SHOW_EXTRA_AZ_TICKS);
+    gtk_polar_view_load_showtracks (GTK_POLAR_VIEW(polv));
 
     /* create the canvas */
     GTK_POLAR_VIEW (polv)->canvas = goo_canvas_new ();
@@ -1002,9 +1007,19 @@ update_sat    (gpointer key, gpointer value, gpointer data)
                                                         NULL);
                 
                 g_free (tooltip);
+                if (goo_canvas_item_model_find_child(root, obj->marker) != -1)
+                    goo_canvas_item_model_raise (obj->marker, NULL);
+                else 
+                    sat_log_log (SAT_LOG_LEVEL_ERROR, 
+                                 _("%s: marker added to polarview not showing %d."),
+                                 __FUNCTION__, *catnum);
                 
-                goo_canvas_item_model_raise (obj->marker, NULL);
-                goo_canvas_item_model_raise (obj->label, NULL);
+                if (goo_canvas_item_model_find_child(root, obj->label) != -1)
+                    goo_canvas_item_model_raise (obj->label, NULL);
+                else 
+                    sat_log_log (SAT_LOG_LEVEL_ERROR, 
+                                 _("%s: label added to polarview not showing %d."),
+                                 __FUNCTION__, *catnum);
                 
                 g_object_set_data (G_OBJECT (obj->marker), "catnum", GINT_TO_POINTER(*catnum));
                 g_object_set_data (G_OBJECT (obj->label), "catnum", GINT_TO_POINTER(*catnum));
@@ -1744,4 +1759,113 @@ static gchar *los_time_to_str (GtkPolarView *polv, sat_t *sat)
     }
 
     return text;
+}
+
+static void
+gtk_polar_view_store_showtracks     (GtkPolarView *pv) {
+    store_binary_hash_cfgdata(pv->cfgdata,
+                              pv->showtracks_on,
+                              MOD_CFG_POLAR_SECTION,
+                              MOD_CFG_POLAR_SHOWTRACKS);   
+    store_binary_hash_cfgdata(pv->cfgdata,
+                              pv->showtracks_off,
+                              MOD_CFG_POLAR_SECTION,
+                              MOD_CFG_POLAR_HIDETRACKS);   
+}
+
+/** \brief Load the satellites that we should not highlight coverage */
+static void
+gtk_polar_view_load_showtracks      (GtkPolarView *pv) 
+{
+    load_integer_list_boolean(pv->cfgdata,
+                              MOD_CFG_POLAR_SECTION,
+                              MOD_CFG_POLAR_HIDETRACKS,
+                              pv->showtracks_off);
+
+    load_integer_list_boolean(pv->cfgdata,
+                              MOD_CFG_POLAR_SECTION,
+                              MOD_CFG_POLAR_SHOWTRACKS,
+                              pv->showtracks_on);
+
+}
+
+/** \brief Load an integer list into a hash table that uses the 
+    existinence of datain the hash as a boolean.
+    It loads NULL's into the hash table.  
+*/
+static void load_integer_list_boolean (GKeyFile *cfgdata,const gchar* section,const gchar *key,GHashTable *dest) {
+    gint   *sats = NULL;
+    gsize   length;
+    GError *error = NULL;
+    guint   i;
+    guint  *tkey;
+
+    sats = g_key_file_get_integer_list (cfgdata,
+                                        section,
+                                        key,
+                                        &length,
+                                        &error);
+    if (error != NULL) {
+        sat_log_log (SAT_LOG_LEVEL_ERROR,
+                     _("%s: Failed to get list of satellites (%s)"),
+                     __FUNCTION__, error->message);
+        
+        g_clear_error (&error);
+        
+        /* GLib API says nothing about the contents in case of error */
+        if (sats) {
+            g_free (sats);
+        }
+        
+        return;
+    }
+     
+    /* read each satellite into hash table */
+    for (i = 0; i < length; i++) {
+        tkey = g_new0 (guint, 1);
+        *tkey = sats[i];
+        //printf("loading sat %d\n",sats[i]);
+        if (!(g_hash_table_lookup_extended (dest, tkey, NULL, NULL))) {
+            /* just add a one to the value so there is presence indicator */
+            g_hash_table_insert (dest,
+                                 tkey,
+                                 NULL);
+        }
+    }
+    g_free(sats);
+}
+
+/** \brief Convert the "boolean" hash back into an integer list and 
+    save it to the cfgdata. */
+static void 
+store_binary_hash_cfgdata (GKeyFile *cfgdata, GHashTable *hash, const gchar *cfgsection, const gchar *cfgkey) 
+{
+    gint *showtrack;
+    gint *something;
+    gint i,length;
+    GList *keys = g_hash_table_get_keys(hash);
+    
+    length = g_list_length(keys);
+    if (g_list_length(keys)>0) {
+        
+        showtrack = g_try_new0(gint,g_list_length(keys));
+        for (i=0;i<length;i++) {
+            something=g_list_nth_data(keys,i);
+            showtrack[i]=*something;
+        }
+        g_key_file_set_integer_list (cfgdata,
+                                     cfgsection,
+                                     cfgkey,
+                                     showtrack,
+                                     g_list_length(keys)
+                                     );
+        
+    } else  {
+        g_key_file_remove_key(cfgdata,
+                              cfgsection,
+                              cfgkey,
+                              NULL);
+    }
+    
+    g_list_free (keys);
 }
